--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>::Welcome to my homepage::</title>
+  <title>::Welcome to my homepage:: (version:1.1)</title>
 </head>
 <body>
   <table border="1" width="80%" cellpadding="4" cellspacing="3" align="center">
