--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>::Welcome to my homepage:: (version:1.1)</title>
+  <title>::Welcome to my homepage::</title>
 </head>
 <body>
   <table border="1" width="80%" cellpadding="4" cellspacing="3" align="center">
     <tr>
       <th colspan="3">
-        <h3><br>Welcome to My Homepage!</h3>
+        <h3><br>Welcome to My Homepage! (version:1.1)</h3>
       </th>
     </tr>
     <tr>
